# agentforge

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  plan.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
docs/: FEATURE_ROADMAP.md  USER_GUIDE.md  day2-products.md  enhancement-spec-v2.md  layered-prompt-architecture.md  repo-product-map.md  showcase.md  telemetry-design.md  wiki-memory-design.md
examples/senior-data-engineer/: README.md
examples/senior-data-engineer/input/: job_description.txt
examples/senior-data-engineer/output/: identity.yaml
scripts/: generate_example_artifacts.py
src/agentforge/: __init__.py  __main__.py  cli.py  cli_wizard.py  config.py  mcp_server.py  utils.py
src/agentforge/analysis/: cost_projector.py  drift_detector.py  gap_analyzer.py  guardrail_auditor.py  prompt_differ.py  prompt_size_analyzer.py  skill_linter.py  skill_refiner.py  skill_reviewer.py  supplement_scorer.py  team_composer.py  team_validator.py  value_estimator.py
src/agentforge/composition/: conductor_generator.py  langgraph_export.py  models.py  orchestration_config.py  team_forger.py
src/agentforge/corpus/: __init__.py  cache.py  loader.py  models.py
src/agentforge/day2/: __init__.py  cli_validators.py  finding_render.py  frontmatter.py  safe_io.py  vcs.py  version_log.py
src/agentforge/department/: __init__.py  cli.py  cluster.py  conductor.py  handoffs.py  readme.py  synthesize.py  synthesize_team.py
src/agentforge/drill/: __init__.py  (+6 more)
tests/: conftest.py  test_anonymizer.py  test_batch.py  test_clawhub_skill.py  test_cli.py  test_cli_stability.py  test_composition.py  test_cost_projector.py  test_culture.py  test_day2.py  test_db.py  test_department.py  test_department_synthesis.py  test_deployment_artifact.py  test_drill.py  test_enhancements.py  test_forge_routes.py  test_guardrail_auditor.py  test_identity_roundtrip.py  test_langgraph_export.py  test_market.py  test_personanexus_deployment.py  test_pipeline.py  test_prompt_differ.py  test_prompt_size.py  test_security.py  test_skill_folder.py  test_skill_linter.py  test_skill_reviewer.py  test_sources.py  test_team_composer.py  test_tend.py  test_testing.py  test_value_estimator.py
tests/fixtures/: senior_data_engineer_identity.yaml
tests/prompt_composer/: test_prompt_composer.py
tests/wiki_memory/: test_wiki_memory.py
(+96 files in other folders)
